# qwak

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: cli.rs  completion.rs  config.rs  lib.rs  main.rs  utils.rs
