[package]
name = "qwak"
version = "0.1.0"
edition = "2024"
description = "Quick agentic aliases."
repository = "https://github.com/BlueBlazin/qwak"
license = "MIT"
keywords = ["ai", "agents"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "qwk"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
serde_json = "1.0.140"
shlex = "1.3.0"

[dev-dependencies]
tempfile = "3.20.0"
